crates/edifact-rs-derive/tests/ui/fail_segment_field_qualifier.stderr
error: field `party_id`: #[edifact(qualifier = ...)] is only valid on message struct fields
  --> tests/ui/fail_segment_field_qualifier.rs:17:15
   |
17 |     #[edifact(qualifier = "MS")]
   |               ^^^^^^^^^
